# PosixPermissions

./: .gitignore  LICENSE.txt  PosixPermissions.sln
PosixPermissions/: AccessControlListEntry.cs  AccessControlListEntryTagTypes.cs  FileInfoExtensions.cs  FilePermissionInfo.Native.cs  FilePermissionInfo.cs  FilePermissions.cs  INativeLibraryInterface.cs  IPosixPermissionsProvider.cs  NativeErrorCodes.cs  NativeException.cs  NativeInterface.cs  NativeLibraryInterface.cs  PosixPermissionInfo.Native.cs  PosixPermissionInfo.cs  PosixPermissions.sln  PosixPermissionsProvider.cs
PosixPermissions.Extensions/: PosixPermissions.Extensions.csproj  ServiceCollectionExtensions.cs
PosixPermissions.Tests/: PosixPermissionInfoTests.cs  PosixPermissions.Tests.csproj
native/: CMakeLists.txt
native/cmake/: FindACL.cmake
native/include/: acl_native.h
native/src/: acl_native.c
